--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
     {% block head %}
     {% endblock %}
 
-    <title>{% block title %}{% endblock %}My HackUPC</title>
+    <title>{% block head_title %}{% endblock %}{% block title %}{% endblock %}My HackUPC</title>
 </head>
 
 
@@ -54,8 +54,8 @@
                     {% if perms.register.checkin %}
                         <li><a href="{% url 'check_in_list' %}">Check-in</a></li>
                     {% endif %}
-                    <li><a href="{% url 'password_change' %}">Change password</a></li>
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                    <li><a href="{% url 'account_change_password' %}">Change password</a></li>
+                    <li><a href="{% url 'account_logout' %}">Logout</a></li>
 
                 </ul>
             </div>
@@ -63,7 +63,8 @@
     </div>
 </nav>
 <div class="content container">
-
+    {% block content %}
+    {% endblock %}
     {% block body %}
     {% endblock %}
 </div>
