--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,7 +41,6 @@
         {% if request.user.is_authenticated %}
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-                <p class="navbar-text">Welcome back <b>{{ request.user.username }}</b></p>
 
                 <ul class="nav navbar-nav navbar-right">
                     {% if request.user.is_staff %}
@@ -54,8 +53,17 @@
                     {% if perms.register.checkin %}
                         <li><a href="{% url 'check_in_list' %}">Check-in</a></li>
                     {% endif %}
-                    <li><a href="{% url 'account_change_password' %}">Change password</a></li>
-                    <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false"> {{ request.user.username }}<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'account_change_password' %}">Change password</a></li>
+                            <li><a href="{% url 'account_email' %}">Edit emails</a></li>
+                            <li><a href="{% url 'profile' %}">Profile</a></li>
+                            <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                        </ul>
+                    </li>
+
 
                 </ul>
             </div>
