--- a/register/templates/include/hacker_form.html
+++ b/register/templates/include/hacker_form.html
@@ -1,5 +1,5 @@
 {% load bootstrap3 %}
-<form class="signup form-horizontal" id="signup_form" method="post" action="">
+<form class="signup form-horizontal" enctype="multipart/form-data" id="signup_form" method="post" action="">
     {% csrf_token %}
     {% bootstrap_form hacker_form layout="horizontal" %}
     {% buttons submit='Submit' layout='horizontal' %}{% endbuttons %}
