change id to uuid and add info when applying

--- a/register/templates/phases/fill_application.html
+++ b/register/templates/phases/fill_application.html
@@ -1,2 +1,4 @@
-
+<p>If you already filled the application please don't apply again. It may take a little bit to syncronize information.
+    If this still shows up after a day please contact us at <a href="mailto:contact@hackupc.com">contact@hackupc.com</a>
+</p>
 <a href="{% url 'apply' %}" class="btn btn-block btn-success">Apply here</a>
