--- a/register/templates/apply.html
+++ b/register/templates/apply.html
@@ -18,7 +18,7 @@
                     border: 0;
                 }</style>
                 <iframe class="margin-top-adjusted" width="100%" height="100%" frameborder="0"
-                        src="https://hackersatupc.typeform.com/to/KaZTUa?hacker_id={{ user.id }}&name={{ user.hacker.name }}&redirect_url={% url 'profile' %}"></iframe>
+                        src="https://hackersatupc.typeform.com/to/KaZTUa?hacker_id={{ user.hacker.uuid }}&name={{ user.hacker.name }}&redirect_url={% url 'profile' %}"></iframe>
             {% endif %}
         {% else %}
             <h4 class="text-center margin-top" style="color: white;">You need to add your personal information before applying</h4>
