add messages and fix status application

--- a/register/templates/apply.html
+++ b/register/templates/apply.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Profile - {% endblock %}
+{% block title %}Apply - {% endblock %}
 
 {% block body %}
     <div class="">
