--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,11 +39,11 @@
             </button>
             <a class="navbar-brand" href="/">My HackUPC</a>
         </div>
-        {% if request.user.is_authenticated %}
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 
-                <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right">
+                {% if request.user.is_authenticated %}
                     {% if request.user.is_staff %}
                         <li><a href="{% url 'admin:index' %}">Admin</a></li>
                     {% endif %}
@@ -65,14 +66,20 @@
                     </li>
 
 
-                </ul>
-            </div>
-        {% endif %}
+
+                {% else %}
+                    <li><a href="{% url 'account_login' %}">Sign In</a></li>
+                    <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
 </nav>
 <div class="content container">
+
     {% block body %}
         <div class="margin-top">
+            {% bootstrap_messages %}
             <div class="col-md-6 col-md-offset-3">
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -83,6 +90,8 @@
                 </div>
             </div>
         </div>
+        {% block extra_body %}
+        {% endblock %}
 
     {% endblock %}
 </div>
