--- a/register/templates/ranking.html
+++ b/register/templates/ranking.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load static %}
+{% load bootstrap3 %}
 {% block title %}Reviewers Ranking - {% endblock %}
 {% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% endblock %}
 {% block body %}
     <div class="row margin-top">
+        {% bootstrap_messages %}
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
                 <div class="panel-heading">HackUPC Reviewer Leaderboard</div>
@@ -16,20 +18,20 @@
                 </div>
                 <table class="table">
                     <thead>
-                        <tr>
-                            <th>Position</th>
-                            <th>Name</th>
-                            <th>Reviews</th>
-                        </tr>
+                    <tr>
+                        <th>Position</th>
+                        <th>Name</th>
+                        <th>Reviews</th>
+                    </tr>
                     </thead>
                     <tbody>
-                        {% for user in ranking %}
+                    {% for user in ranking %}
                         <tr>
-                            <td>{{forloop.counter | ordinal}}</td>
-                            <td>{{user.username}}</td>
-                            <td>{{user.vote_count}}</td>
+                            <td>{{ forloop.counter | ordinal }}</td>
+                            <td>{{ user.username }}</td>
+                            <td>{{ user.vote_count }}</td>
                         </tr>
-                        {% endfor %}
+                    {% endfor %}
                     </tbody>
                 </table>
             </div>
