--- a/register/templates/vote.html
+++ b/register/templates/vote.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
+{% load bootstrap3 %}
 {% load static %}
 {% block title %}Vote applications - {% endblock %}
 {% block head %}
@@ -8,6 +9,7 @@
 {% endblock %}
 {% block body %}
     <div class="row margin-top">
+        {% bootstrap_messages %}
         <div class="col-md-6 col-md-offset-3">
             {% if app %}
                 <div class="panel panel-default">
@@ -82,7 +84,8 @@
                     </div>
                 </div>
             {% else %}
-                <h4 class="text-center" style="color: white;">No applications left to be voted.<br> Good job! Enjoy the sun outside!</h4>
+                <h4 class="text-center" style="color: white;">No applications left to be voted.<br> Good job! Enjoy the
+                    sun outside!</h4>
             {% endif %}
         </div>
     </div>
