--- a/app/templates/account/email/password_reset_key_message.html
+++ b/app/templates/account/email/password_reset_key_message.html
@@ -1,6 +1,8 @@
 {% extends 'base_email.html' %}
 {% load account %}
 {% user_display user as user_display %}
+{% block preheader %}Change password request from {{ current_site.name }}{% endblock %}
+
 {% block content %}
     {% include 'include/email_line_start.html' %}
     Hi {{ user_display }}from <a href="{{ current_site.domain }}" target="_blank">{{ current_site.name }}</a> ,
@@ -9,5 +11,7 @@
     {% include 'include/email_line.html' with text="It can be safely ignored if you did not request a password reset. Click the link below to reset your password." %}
     {% include 'include/email_button.html' with text='Reset password' url=password_reset_url %}
 
-    {% include 'include/email_line.html' with text="Thank you for using "|add:current_site.name %}
+    {% include 'include/email_line.html' with text="Best," %}
+    {% include 'include/email_line.html' with text="" %}
+    {% include 'include/email_line.html' with text=current_site.name|add:" Team" %}
 {% endblock %}
