--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -108,7 +108,7 @@
                      style="display: block; color: #000; margin:0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-width: 1240px !important; width: 80% !important; height: auto !important; "/>
                 <!-- START CENTERED WHITE CONTAINER -->
                 <span class="preheader"
-                      style="color:transparent;display:none;height:0;max-height:0;max-width:0;opacity:0;overflow:hidden;mso-hide:all;visibility:hidden;width:0;">This is preheader text. Some clients will show this text as a preview.</span>
+                      style="color:transparent;display:none;height:0;max-height:0;max-width:0;opacity:0;overflow:hidden;mso-hide:all;visibility:hidden;width:0;">{% block preheader %}This is preheader text. Some clients will show this text as a preview.{% endblock %}</span>
                 {% block main %}
                     <table class="main"
                            style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background:#fff;border-radius:3px;width:100%;">
