--- a/register/templates/confirm.html
+++ b/register/templates/confirm.html
@@ -41,7 +41,7 @@
                         We can't wait to have you here.
                         <br><br>
                         If you can't make it anymore, please cancel your participation <a
-                            href="{% url 'cancel_app' application.id %}">here</a>.
+                            href="{% url 'cancel_app' %}">here</a>.
                     </div>
                 </div>
 
