--- a/register/templates/register/mails/invitation_message.html
+++ b/register/templates/register/mails/invitation_message.html
@@ -22,17 +22,5 @@
         {% include 'include/email_line_end.html' %}
     {% endif %}
     {% include 'include/email_line_start.html' %}
-    <b>When to Arrive</b> Registration opens at 3:00 pm and closes at 6:00 pm on Friday March 3rd, the opening ceremony
-    will be at 7:00 pm.<br>
-    Have any other question? Email us at {{ email|urlize }}
-{#    TODO: Check if email and fb or twitter are defined before #}
-    or message us on
-    <a href="{{ fb }}" target="_blank">Facebook</a>
-    and
-    <a href="{{ twitter }}" target="_blank">Twitter</a>.
-    {% include 'include/email_line_end.html' %}
-    {% include 'include/email_line.html' with text="See you soon in Barcelona!" %}
-    {% include 'include/email_line.html' with text="Best," %}
-    {% include 'include/email_line.html' with text="" %}
-    {% include 'include/email_line.html' with text=current_site.name|add:" Team" %}
+    {% include 'register/mails/include/closing.html' %}
 {% endblock %}
