--- a/register/templates/phases/invited.html
+++ b/register/templates/phases/invited.html
@@ -1,3 +1,5 @@
-<p>Congrats! You have been invited to come to HackUPC! You have
+<p>Congrats! You have been invited to come to HackUPC! Please respond this invite.
+    {% if invite_deadline %}It will expire in {{ invite_deadline|timeuntil }}{% endif %}
 </p>
-<a href="{% url 'apply' %}" class="btn btn-block btn-success">Apply here</a>
+<a href="{% url 'confirm_app' %}" class="btn btn-block btn-success">Confirm</a>
+<a href="{% url 'cancel_app' %}" class="btn btn-block btn-danger">Cancel</a>
