--- a/register/templates/register/mails/include/closing.html
+++ b/register/templates/register/mails/include/closing.html
@@ -1,5 +1,4 @@
-<b>When to Arrive</b> Registration opens at 3:00 pm and closes at 6:00 pm on Friday March 3rd, the opening ceremony
-will be at 7:00 pm.<br>
+{% include 'include/email_line_start.html' %}
 Have any other question? Email us at {{ email|urlize }}
 {#    TODO: Check if email and fb or twitter are defined before #}
 or message us on
