--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -2,6 +2,7 @@
 {% load account %}
 {% load utils %}
 {% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
+{% settings_value "CURRENT_EDITION" as edition_name %}
 {# Based on https://github.com/leemunroe/responsive-html-email-template #}
 <!DOCTYPE html>
 <html>
@@ -110,7 +111,8 @@
                      style="display: block; color: #000; margin:0 auto; padding-bottom:20px; padding-top:20px;text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;  max-width: 1240px !important; width: 80% !important; height: auto !important; "/>
                 <!-- START CENTERED WHITE CONTAINER -->
                 <span class="preheader"
-                      style="color:transparent;display:none;height:0;max-height:0;max-width:0;opacity:0;overflow:hidden;mso-hide:all;visibility:hidden;width:0;">{% block preheader %}This is preheader text. Some clients will show this text as a preview.{% endblock %}</span>
+                      style="color:transparent;display:none;height:0;max-height:0;max-width:0;opacity:0;overflow:hidden;mso-hide:all;visibility:hidden;width:0;">{% block preheader %}
+                    This is preheader text. Some clients will show this text as a preview.{% endblock %}</span>
                 {% block main %}
                     <table class="main"
                            style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background:#fff;border-radius:3px;width:100%;">
@@ -151,7 +153,9 @@
                                 <td class="content-block"
                                     style="font-family:sans-serif;font-size:14px;vertical-align:top;color:#999999;font-size:12px;text-align:center;">
                                     {% block footer_content %}
-                                        {% include 'include/email_footer_line.html' with text=current_site.name|add:' 2017' %}
+
+                                        {% include 'include/email_footer_line.html' with text='You are receiving this because you applied to '|add:current_site.name|add:' '|add:edition_name %}
+                                        {% include 'include/email_footer_line.html' with text='. If you think this is a mistake, please send us an email at '|add:static_values.email|urlize %}
                                     {% endblock %}
                                     <table style="padding-top: 20px" cellpadding="0" cellspacing="0" border="0"
                                            align="center">
