--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h1><center>{% trans "Sign In" %}</h1></center>
 
 {% get_providers as socialaccount_providers %}
 
@@ -33,14 +33,27 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
+<form class="login" method="POST" action="/accounts/login/">
   {% csrf_token %}
-  {{ form.as_p }}
+  <div class="form-group row">
+      <label for="id_login" class="col-sm-2 col-form-label">Email</label>
+      <div class="col-sm-10">
+        <input class="form-control" autofocus="autofocus" id="id_login" name="login" placeholder="E-mail address" type="email" required />
+      </div>
+  </div>
+  <div class="form-group row">
+      <label for="id_password" class="col-sm-2 col-form-label">Password</label>
+      <div class="col-sm-10">
+        <input class="form-control" id="id_password" name="password" placeholder="Password" type="password" required /></p>
+      </div>
+  </div>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+
+
 </form>
 
 {% endblock %}
