--- a/app/templates/account/signup.html
+++ b/app/templates/account/signup.html
@@ -5,17 +5,34 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<h1><center>{% trans "Sign Up" %}</center></h1>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  <div class="form-group row">
+      <label for="id_login" class="col-sm-2 col-form-label">Email</label>
+      <div class="col-sm-10">
+        <input class="form-control" id="id_email" name="email" placeholder="E-mail address" type="email" required />
+      </div>
+  </div>
+  <div class="form-group row">
+      <label for="id_login" class="col-sm-2 col-form-label">Password</label>
+      <div class="col-sm-10">
+        <input class="form-control" id="id_password1" name="password1" placeholder="Password" type="password" required />
+      </div>
+  </div>
+  <div class="form-group row">
+      <label for="id_login" class="col-sm-2 col-form-label">Password (again)</label>
+      <div class="col-sm-10">
+        <input class="form-control" id="id_password2" name="password2" placeholder="Password (again)" type="password" required />
+      </div>
+  </div>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
 </form>
 
 {% endblock %}
