small fix for allauth template titles

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
     {% block head %}
     {% endblock %}
 
-    <title>{% block head_title %}{% endblock %}{% block title %}{% endblock %}My HackUPC</title>
+    <title>{% block title %}{% block head_title %}{% endblock %} - {% endblock %}My HackUPC</title>
 </head>
 
 
