--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -7,53 +7,58 @@
 
 {% block content %}
 
-<h1><center>{% trans "Sign In" %}</h1></center>
+    <h1 style="text-align: center">{% trans "Sign In" %}</h1>
 
-{% get_providers as socialaccount_providers %}
+    {% get_providers as socialaccount_providers %}
 
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+    {% if socialaccount_providers %}
+        <p>{% blocktrans with site.name as site_name %}Please sign in with one
+            of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+            for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-<div class="socialaccount_ballot">
+        <div class="socialaccount_ballot">
 
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
+            <ul class="socialaccount_providers">
+                {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+            </ul>
 
-  <div class="login-or">{% trans 'or' %}</div>
+            <div class="login-or">{% trans 'or' %}</div>
 
-</div>
+        </div>
 
-{% include "socialaccount/snippets/login_extra.html" %}
+        {% include "socialaccount/snippets/login_extra.html" %}
 
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
+    {% else %}
+        <p>{% blocktrans %}If you have not created an account yet, then please
+            <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+    {% endif %}
 
-<form class="login" method="POST" action="/accounts/login/">
-  {% csrf_token %}
-  <div class="form-group row">
-      <label for="id_login" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-10">
-        <input class="form-control" autofocus="autofocus" id="id_login" name="login" placeholder="E-mail address" type="email" required />
-      </div>
-  </div>
-  <div class="form-group row">
-      <label for="id_password" class="col-sm-2 col-form-label">Password</label>
-      <div class="col-sm-10">
-        <input class="form-control" id="id_password" name="password" placeholder="Password" type="password" required /></p>
-      </div>
-  </div>
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+    <form class="login" method="POST" action="/accounts/login/">
+        {% csrf_token %}
+        <div class="form-group row">
+            <label for="id_login" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+                <input class="form-control" autofocus="autofocus" id="id_login" name="login"
+                       placeholder="E-mail address" type="email" required/>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="id_password" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
+                <input class="form-control" id="id_password" name="password" placeholder="Password" type="password"
+                       required/>
+                <a class="button secondaryAction"
+                   href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a><br>
+            </div>
 
 
-</form>
+        </div>
+        {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+        {% endif %}
+        <button class="btn btn-primary btn-block" type="submit">{% trans "Sign In" %}</button>
+
+
+    </form>
 
 {% endblock %}
