add subscribe form in sign up and cancelled

--- a/register/templates/phases/fill_application.html
+++ b/register/templates/phases/fill_application.html
@@ -1,4 +1,7 @@
-<p>If you already filled the application please don't apply again. It may take a little bit to syncronize information.
-    If this still shows up after a day please contact us at <a href="mailto:contact@hackupc.com">contact@hackupc.com</a>
-</p>
-<a href="{% url 'apply' %}" class="btn btn-block btn-success">Apply here</a>
+{% if not application %}
+    <p> You will be redirected to a new page to fill an application.
+    </p>
+    <a href="{% url 'apply' %}" target="_blank" class="btn btn-block btn-success">Apply here</a>
+{% else %}
+    <p>Your application has been received and it's being reviewed.</p>
+{% endif %}
