--- a/app/templates/account/logout.html
+++ b/app/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h1><center>{% trans "Sign Out" %}</center></h1>
+<h1 class="text-center">{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
@@ -14,7 +14,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="btn btn-primary" type="submit">{% trans 'Sign Out' %}</button>
+  <button class="btn btn-primary btn-block" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
 
