--- a/app/templates/account/signup_closed.html
+++ b/app/templates/account/signup_closed.html
@@ -5,7 +5,8 @@
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+    <h1 class="text-center">{% trans "Sign Up Closed" %}</h1>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+    <p>We are sorry, applications are now closed</p>
+    {% include 'include/subscribe_form.html' %}
 {% endblock %}
