--- a/register/templates/phases/invited.html
+++ b/register/templates/phases/invited.html
@@ -1,5 +1,16 @@
-<p>Congrats! You have been invited to come to HackUPC! Please respond this invite.
-    {% if invite_deadline %}It will expire in {{ invite_deadline|timeuntil }}{% endif %}
-</p>
-<a href="{% url 'confirm_app' %}" class="btn btn-block btn-success">Confirm</a>
-<a href="{% url 'cancel_app' %}" class="btn btn-block btn-danger">Cancel</a>
+{% if application.answered_invite %}
+    Thanks for answering the invite
+    {% if application.can_be_cancelled %}
+        If you can no longer attend please cancel your invite here.
+        <a href="{% url 'cancel_app' %}" class="btn btn-block btn-danger">Cancel</a>
+    {% else %}
+        We are sorry that you can't come to HackUPC. We are looking forward to welcome you next edition.
+        {% include 'include/subscribe_form.html' %}
+    {% endif %}
+{% else %}
+    <p>Congrats! You have been invited to come to HackUPC! Please respond this invite.
+        {% if invite_deadline %}It will expire in {{ invite_deadline|timeuntil }}{% endif %}
+    </p>
+    <a href="{% url 'confirm_app' %}" class="btn btn-block btn-success">Confirm</a>
+    <a href="{% url 'cancel_app' %}" class="btn btn-block btn-danger">Cancel</a>
+{% endif %}
