--- a/register/templates/cancel.html
+++ b/register/templates/cancel.html
@@ -16,7 +16,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">
                             {% if application %}
-                                We are sorry {{ application.name }}
+                                We are sorry {{ application.hacker.name }}
                             {% else %}
                                 ¯\_(ツ)_/¯
                             {% endif %}
@@ -24,6 +24,7 @@
                     </div>
                     <div class="panel-body">
                         {{ error }}
+                        <a href="{% url 'profile' %}" class="btn btn-default btn-block"> Back to your profile</a>
                     </div>
                     <div class="panel-footer">
                         Please contact us if you think this is an error: <a href="mailto:contact@hackupc.com">contact@hackupc.com</a>
@@ -46,6 +47,7 @@
                             <input type="hidden" value="cancel_anyway" name="action">
                             <button class="btn btn-danger btn-lg btn-block">Cancel anyways</button>
                         </form>
+                        <a href="{% url 'profile' %}" class="btn btn-default btn-block"> Back to profile</a>
                     </div>
                 </div>
             {% endif %}
