--- a/register/templates/confirm.html
+++ b/register/templates/confirm.html
@@ -18,6 +18,8 @@
                     </div>
                     <div class="panel-body">
                         {{ error }}
+                        <a href="{% url 'profile' %}" class="btn btn-default btn-block"> Back to your profile</a>
+
                     </div>
                     <div class="panel-footer">
                         Please contact us if you think this is an error: <a href="mailto:contact@hackupc.com">contact@hackupc.com</a>
@@ -39,6 +41,8 @@
                             {{ hacker.name }}, you just confirmed your spot at HackUPC Spring 2017!
                         {% endif %}
                         We can't wait to have you here.
+                        <a href="{% url 'profile' %}" class="btn btn-default btn-block"> Back to your profile</a>
+
                         <br><br>
                         If you can't make it anymore, please cancel your participation <a
                             href="{% url 'cancel_app' %}">here</a>.
