--- a/register/templates/phases/attend.html
+++ b/register/templates/phases/attend.html
@@ -1,8 +1,10 @@
-<div style="text-align: center">
+<div>
     You are all good to go! See you soon in Barcelona!
-    <h4>QR Code</h4>
+    <h2>QR Code</h2>
+    Please show the following QR code to our staff when you arrive for check-in.
     <img src="http://chart.googleapis.com/chart?cht=qr&chs=350x350&chl={{ application.id }}"/>
-    <h4>When to Arrive</h4>
+    <h2>Important information</h2>
+    <h3>When to arrive</h3>
     Registration opens at 3:00 pm and closes at 6:00 pm on Friday March 3rd, the opening ceremony
     will be at 7:00 pm.<br>
 </div>
