format todo list as listgroup

--- a/register/templates/profile.html
+++ b/register/templates/profile.html
@@ -30,12 +30,17 @@
                     <h3 class="panel-title">To do list</h3>
                 </div>
                 <div class="panel-body">
-                    {% for phase in phases %}
-                        - <a href="?phase={{ phase.key }}">{{ phase.title }} ({{ phase.finished }})</a><br>
-                    {% endfor %}
-                </div>
-                <div class="panel-footer">
-                    Errors? Help? Reach us {{ static_values.email|urlize }}
+                    <div class="list-group">
+                        {% for phase in phases %}
+                            <a href="{% if phase.finished or phase.key == current.key %}?phase={{ phase.key }}{% else %}#{% endif %}"
+                               class="list-group-item {% if phase.key == showing.key %}active{% elif not phase.finished and not phase.key == current.key %}disabled{% endif %}">
+                                {{ phase.title }}
+                            </a>
+                        {% endfor %}
+                    </div>
+                    <div class="panel-footer">
+                        Errors? Help? Reach us {{ static_values.email|urlize }}
+                    </div>
                 </div>
             </div>
         </div>
@@ -43,11 +48,11 @@
 
             <div class="panel panel-success">
                 <div class="panel-heading">
-                    <h3 class="panel-title">{{ current.title }}</h3>
+                    <h3 class="panel-title">{{ showing.title }}</h3>
                 </div>
                 <div class="panel-body">
 
-                    {% include current.template %}
+                    {% include showing.template %}
                 </div>
             </div>
 
