--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,54 +27,57 @@
 
 
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">My HackUPC</a>
+{% block navbar %}
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">My HackUPC</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+
+                <ul class="nav navbar-nav navbar-right">
+                    {% if request.user.is_authenticated %}
+                        {% if request.user.is_staff %}
+                            <li><a href="{% url 'admin:index' %}">Admin</a></li>
+                        {% endif %}
+                        {% if perms.register.vote %}
+                            <li><a href="{% url 'vote' %}">Vote</a></li>
+                            <li><a href="{% url 'ranking' %}">Ranking</a></li>
+                        {% endif %}
+                        {% if perms.register.checkin %}
+                            <li><a href="{% url 'check_in_list' %}">Check-in</a></li>
+                        {% endif %}
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-haspopup="true"
+                               aria-expanded="false"> {{ request.user.username }}<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{% url 'account_change_password' %}">Change password</a></li>
+                                <li><a href="{% url 'account_email' %}">Edit emails</a></li>
+                                <li><a href="{% url 'profile' %}">Profile</a></li>
+                                <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                            </ul>
+                        </li>
+
+
+
+                    {% else %}
+                        <li><a href="{% url 'account_login' %}">Sign In</a></li>
+                        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
-            <ul class="nav navbar-nav navbar-right">
-                {% if request.user.is_authenticated %}
-                    {% if request.user.is_staff %}
-                        <li><a href="{% url 'admin:index' %}">Admin</a></li>
-                    {% endif %}
-                    {% if perms.register.vote %}
-                        <li><a href="{% url 'vote' %}">Vote</a></li>
-                        <li><a href="{% url 'ranking' %}">Ranking</a></li>
-                    {% endif %}
-                    {% if perms.register.checkin %}
-                        <li><a href="{% url 'check_in_list' %}">Check-in</a></li>
-                    {% endif %}
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false"> {{ request.user.username }}<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{% url 'account_change_password' %}">Change password</a></li>
-                            <li><a href="{% url 'account_email' %}">Edit emails</a></li>
-                            <li><a href="{% url 'profile' %}">Profile</a></li>
-                            <li><a href="{% url 'account_logout' %}">Logout</a></li>
-                        </ul>
-                    </li>
-
-
-
-                {% else %}
-                    <li><a href="{% url 'account_login' %}">Sign In</a></li>
-                    <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-</nav>
+    </nav>
+{% endblock %}
 <div class="content container">
 
     {% block body %}
