add rejected messages

--- a/register/templates/phases/invited.html
+++ b/register/templates/phases/invited.html
@@ -1,5 +1,6 @@
 {% load utils %}
 {% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
+{% settings_value "EVENT_NAME" as event_name %}
 
 {% if application.answered_invite %}
     Thanks for answering the invite
@@ -19,6 +20,14 @@
 {% elif application.is_expired %}
     We are sorry, your invite expired. If you think this is an error or you still want to come, please message us at
     {{ static_values.email|urlize }}. We will decide case-per-case what is the result.
+{% elif application.is_rejected %}
+    <p>Thank you for applying to {{ event_name }}; we are regrettably unable to offer you a spot at our event this year.
+        At this time the event is at full capacity.</p>
+    <p>Remember, hackathons are about passion and building things, it doesn't matter where!
+        Check out all the awesome upcoming hackathons happening this season on the <a href="https://mlh.io/events"
+                                                                                      target="_blank">MLH website!</a>
+    </p>
+{#    Message inspired by HackTheNorth rejection email... Tries to be positive :D #}
 {% else %}
     <p>We have received your application. We'll get back to you very soon.</p>
 {% endif %}
