--- a/register/templates/vote.html
+++ b/register/templates/vote.html
@@ -46,17 +46,17 @@
                         <h4 class="text-center">Social</h4>
 
                         <p class="text-center">
-                            {% if app.github and not app.github == 'http://' %}
-                                <a target="_blank" href="{{ app.github }}" class="icon fa fa-github"></a>
+                            {% if app.hacker.github and not app.hacker.github == 'http://' %}
+                                <a target="_blank" href="{{ app.hacker.github }}" class="icon fa fa-github"></a>
                             {% endif %}
-                            {% if app.linkedin and not app.linkedin == 'http://' %}
-                                <a target="_blank" href="{{ app.linkedin }}" class="icon fa fa-linkedin"></a>
+                            {% if app.hacker.linkedin and not app.hacker.linkedin == 'http://' %}
+                                <a target="_blank" href="{{ app.hacker.linkedin }}" class="icon fa fa-linkedin"></a>
                             {% endif %}
-                            {% if app.site and not app.site == 'http://' %}
-                                <a target="_blank" href="{{ app.site }}" class="icon fa fa-globe"></a>
+                            {% if app.hacker.site and not app.hacker.site == 'http://' %}
+                                <a target="_blank" href="{{ app.hacker.site }}" class="icon fa fa-globe"></a>
                             {% endif %}
-                            {% if app.devpost and not app.devpost == 'http://' %}
-                                <a target="_blank" href="{{ app.devpost }}" class="icon">
+                            {% if app.hacker.devpost and not app.hacker.devpost == 'http://' %}
+                                <a target="_blank" href="{{ app.hacker.devpost }}" class="icon">
                                     <img class="icon" src="{% static 'img/devpost.svg' %}"/>
                                 </a>
                             {% endif %}
